load gallery pics in slider

--- a/app1/templates/villa_new.html
+++ b/app1/templates/villa_new.html
@@ -55,8 +55,8 @@
         <div class="row">
             <div class="col-sm-8">
                 <ul class="dropdown clearfix boxed">
-                    <li class="menu-level-0 first"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu"></i><span>ورود</span></a></li>
-                    <li class="menu-level-0"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu icon-menu2"></i><span>سفارش های من</span></a> </li>
+                    <li class="menu-level-0 first"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu"></i><span>رخدادهای من</span></a></li>
+                    <li class="menu-level-0"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu icon-menu2"></i><span>لیست دلخواه</span></a> </li>
                     <li class="menu-level-0 last"><a href="#" hidefocus="true" style="outline: none;"><i class="icon-menu icon-menu4"></i><span>تنظیمات</span></a></li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
                 <ul class="dropdown clearfix boxed">
                     <a id="loginBtn" href="#" class="btn btn-small"><span>ورود</span></a>
                     <!--<input  id="loginBtn" type="button" class="loginHeader" value="ورود"/>-->
-                    <form id="myModal" class="modal">
+                    <form id="myModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                       <!-- Modal content -->
                       <div id = "loginForm" class="modal-content">
                         <div><input id = 'closeLoginBtn' data-toggle="tooltip" class="close" type="button" value=" برگشت به برنامه... &times;"  > </div>
