--- a/app1/templates/travel.amp.html
+++ b/app1/templates/travel.amp.html
@@ -138,7 +138,7 @@
           </label>
         </div>
 
-        <a href="travel-results.amp" class="ampstart-btn travel-input-big rounded center bold white block col-12" on="
+        <a href="villa" class="ampstart-btn travel-input-big rounded center bold white block col-12" on="
             tap:AMP.setState({
                 ui_reset: false,
                 ui_filterPane: false,
