price range filter

--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -394,7 +394,7 @@
 							{% for villa in villa_list %}
 							<div class="item">
 								<div class="hotel-entry">
-									<a href="villa.html" class="hotel-img" {% if villa.photo %} style="background-image: url('{{ villa.photo.url }}');background-size: cover" {% endif %}>
+									<a href="villa" class="hotel-img" {% if villa.photo %} style="background-image: url('{{ villa.photo.url }}');background-size: cover" {% endif %}>
 										<p class="price"><span>$120</span><small> /شبی</small></p>
 									</a>
 									<div class="desc">
