--- a/app1/templates/villa_new.html
+++ b/app1/templates/villa_new.html
@@ -165,7 +165,7 @@
                                             from: 0,
                                             to: 1000000,
                                             limits: false,
-                                            scale: ['تومان0', 'تومان1000000'],
+                                            scale: ['', ''],
                                             heterogeneity: ['50/300'],
                                             step: 10000,
                                             smooth: false,
